

**** 1.38 [unreleased]

	Mailbox.pm: Improve robustness of address parsing.
	Deprecate packet->edns->size() method.
	Deprecate rdatastr() historical RR subtype method.
	Major overhaul of pre-installation test scripts.
	Add new t/TestToolkit.pm
	Refactor socket code and control structure in
	Nameserver.pm and improve efficiency of zonefile
	data storage and retrieval.

Fix rt.cpan.org #147507
	Nameserver.pm: peerhost undefined after $sock->accept


**** 1.37 Mar 13, 2023

	Add links to relevant RFCs in package documentation.

Fix rt.cpan.org #147038
	resolver->axfr( undef ) fails silently

Fix rt.cpan.org #145944
	Case sensitivity issue with AXFR


**** 1.36 Dec 30, 2022

	Adopt JSON as presentation notation for EDNS options.
	Disallow zero packet->id in outbound packet.
	Remove deprecated 2-argument TSIG->create() method.
	Revise TSIG test scripts and documentation.


**** 1.35 Oct 4, 2022

	Improve SVCB error reporting.

Fix rt.cpan.org #144328
	accept_reply test fails with matched consecutive "random"
	generated packet->id

Fix rt.cpan.org #144299
	Spelling errors.


**** 1.34 May 30, 2022

	Improve robustness of EDNS option compose/decompose functions.
	Simplify code in Makefile.PL.

Fix rt.cpan.org #142426
	Avoid "Useless use of a constant in void context" warning.


**** 1.33 Dec 16, 2021

Fix rt.cpan.org #137768
	Test t/05-SVCB.t on Perl 5.18.0 fails with deep recursion.

Fix rt.cpan.org #144136/#132921
	$resolver->send wrongly overwrites RD flag in user's packet.


**** 1.32 Jul 16, 2021

	Text: Offer both Unicode and escaped-ASCII strings.
	Add LICENSE file to comply with Fedora/RedHat announcement.

Fix rt.cpan.org #136666
	Net::DNS::RR::ZoneFile parser erroneously strips line
	terminators in quoted string forming part of multiline RR.


**** 1.31 May 2, 2021

	Improve implementation of SVCB record.


**** 1.30 Mar 30, 2021

	Simplify parsing of multi-line RRs in zone file.
	Improve robustness of "dry" resolver tests.